--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,10 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+docker/cockroach-data/crdb
+.idea/
 
 ### IntelliJ IDEA ###
-.idea/*
 *.iws
 *.iml
 *.ipr
